--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "scripts": {
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:dev": "vitepress dev",
+    "docs:build": "vitepress build",
+    "docs:preview": "vitepress preview"
   },
   "devDependencies": {
-    "vuepress": "^2.0.0-beta.49"
+    "vitepress": "^1.0.0-rc.20"
   }
 }
