--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "docs:preview": "vitepress preview"
   },
   "devDependencies": {
+    "@mdi/font": "^7.3.67",
     "vitepress": "^1.0.0-rc.20"
+  },
+  "dependencies": {
+    "vuetify": "^3.3.20"
   }
 }
