--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.3.67",
-    "vitepress": "^1.0.0-rc.20"
+    "vitepress": "^1.3.2"
   },
   "dependencies": {
     "vuetify": "^3.3.20"
